# RsQueue

./: .gitlab-ci.yml  Cargo.toml  Dockerfile
src/: main.rs
