[package]
name = "rsqueue"
version = "1.0.0"
edition = "2021"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
axum = "0.6.4"
hyper = "0.14.24"
tokio = { version = "1.25.0", features = ["full"] }
once_cell = "1.17.0"
log = "0.4.17"
simple_logger = "4.0.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.79"